[tool.poetry]
name = "PMC tools"
version = "0.1.0"
description = ""
authors = ["Julien Tourille <julien.tourille@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pubmed-parser = {git = "https://github.com/titipata/pubmed_parser.git"}
spacy = "^3.0.5"
scispacy = "^0.4.0"
en-core-sci-lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.12.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
