[tool.poetry]
name = "PMC tools"
version = "0.1.0"
description = ""
authors = ["Julien Tourille <julien.tourille@gmail.com>"]
license = "MIT"
packages = [
    { include = "pmctools", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.0.5"
scispacy = "^0.4.0"
pubmed-parser = {git = "https://github.com/titipata/pubmed_parser.git", rev = "ee0fce583cf111b71430660e743fd0d72acd68ed"}
click = "^7.1.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.12.0"
isort = "^5.8.0"
jupyterlab = "^3.0.13"

[tool.poetry.scripts]
pmc = 'pmctools.cli:cli'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
